--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "react-toastify": "^7.0.3",
+    "react-truncate": "^2.4.0",
     "react-typical": "^0.1.3",
     "web-vitals": "^1.1.0",
     "yup": "^0.32.9"
