--- a/my-app/package.json
+++ b/my-app/package.json
@@ -1,31 +1,15 @@
 {
-  "name": "la-villa",
+  "name": "my-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.11.3",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.57",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
-    "@testing-library/user-event": "^12.7.1",
-    "axios": "^0.21.1",
-    "bootstrap": "^4.6.0",
-    "formik": "^2.2.6",
-    "mdb-react-ui-kit": "^1.0.0-alpha3",
-    "mdb-ui-kit": "^3.3.0",
-    "mdbreact": "^5.0.1",
+    "@testing-library/user-event": "^12.7.3",
     "react": "^17.0.1",
-    "react-bootstrap": "^1.5.0",
-    "react-credit-cards": "^0.8.3",
     "react-dom": "^17.0.1",
-    "react-icons": "^4.2.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.2",
-    "react-toastify": "^7.0.3",
-    "react-typical": "^0.1.3",
-    "web-vitals": "^1.1.0",
-    "yup": "^0.32.9"
+    "react-scripts": "4.0.3",
+    "web-vitals": "^1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
