--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "react-spring": "^8.0.27",
     "react-toastify": "^7.0.3",
     "react-truncate": "^2.4.0",
     "react-typical": "^0.1.3",
