--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "react-credit-cards": "^0.8.3",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "react-slick": "^0.28.0",
     "react-spring": "^8.0.27",
     "react-toastify": "^7.0.3",
     "react-truncate": "^2.4.0",
