--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-toastify": "^7.0.3",
     "react-truncate": "^2.4.0",
     "react-typical": "^0.1.3",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.2.1",
     "web-vitals": "^1.1.0",
     "yup": "^0.32.9"
